--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-github-pages": "~0.0.4"
   }
 }
 
